--- a/action.yaml
+++ b/action.yaml
@@ -3,6 +3,6 @@ description: 'Sets up PSPTOOLCHAIN for homebrew compilation'
 author: 'krystalgamer'
 runs:
   using: 'composite'
-  stesps:
+  steps:
     - run: $GITHUB_ACTION_PATH/setup.sh
     shell: bash
