--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
+      - name: Make the script executable
+        run: chmod +x setup.sh
+        
       - name: Runs the setup-psptoolchain
         uses: ./
